# chess_engine_nn

./: .gitignore  MANIFEST.in  README.md  board.py  evaluate.py  game.py  pyproject.toml  search.py  try_neuron.py
.md/: Baseline.md  Design.md  Memory.md  Phase6.md  Phase7.md  Phase8.md  Rules.md  architechture.md  phases.md  prd.md
chess_engine_nn/: __init__.py  artifacts.py  cli.py  config.py  encoding.py  errors.py  evaluator.py  logging.py  model.py  reproducibility.py  search.py  time_control.py  transposition.py  uci.py
chess_engine_nn/data/: __init__.py  generate.py  label.py  pgn.py  records.py  split.py
chess_engine_nn/training/: __init__.py  dataset.py  export.py  metrics.py  train.py
chess_engine_nn/web_api/: __init__.py  __main__.py  app.py  game_service.py
chess_engine_nn/web_api/static/: index.html
chess_engine_nn/web_api/static/assets/: index-COcKLk0i.js  index-cnkVWIz_.css
configs/: benchmark.toml  dev.toml  release.toml  train.toml
tests/: conftest.py  test_baseline_openings.py  test_benchmark_phase6.py  test_cli.py  test_config.py  test_encoding.py  test_evaluator.py  test_export.py  test_generate.py  test_label.py  test_legacy_match.py  test_logging.py  test_metrics.py  test_model.py  test_pgn.py  test_records.py  test_reproducibility.py  test_search.py  test_split.py  test_tactical_suite.py  test_time_control.py  test_training.py  test_training_dataset.py  test_transposition.py  test_uci.py  test_web_api.py  test_web_game_service.py
tests/fixtures/: games.pgn
tests/positions/: baseline_openings.epd  encoding_v1_golden.json  search_tactics.json
tools/: benchmark_jsonl.py  benchmark_phase6.py  benchmark_search.py  capture_legacy_baseline.py  run_legacy_match.py
web/: README.md  package-lock.json  package.json  vite.local.config.ts
web/app/: globals.css  layout.tsx  page.tsx  types.ts
web/app/components/: ChessBoard.tsx  ChessGame.tsx  GamePanel.tsx  NewGameDialog.tsx  PlayerStrip.tsx
web/app/services/: gameClient.ts
web/local/: index.html  main.tsx
web/tests/: rendered-html.test.mjs
