[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-engine-nn"
version = "0.1.0"
description = "CPU-first neural chess engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26,<3",
  "python-chess>=1.999,<2",
  "torch>=2.2,<3",
]

[project.optional-dependencies]
training = []
web = [
  "fastapi>=0.139,<1",
  "uvicorn>=0.48,<1",
]
dev = ["pytest>=8,<10", "ruff>=0.5,<1"]

[project.scripts]
chess-engine-nn = "chess_engine_nn.cli:main"
chess-engine-nn-uci = "chess_engine_nn.uci:main"
chess-engine-nn-web = "chess_engine_nn.web_api.__main__:main"

[tool.setuptools.packages.find]
include = ["chess_engine_nn*"]

[tool.setuptools.package-data]
"chess_engine_nn.web_api" = ["static/**/*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = ["stockfish: requires the external Stockfish executable"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["board.py", "evaluate.py", "game.py", "search.py", "try_neuron.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
